Cambios en movil bugs

--- a/src/app/pages/drivers/components/driver-list/driver-list.component.scss
+++ b/src/app/pages/drivers/components/driver-list/driver-list.component.scss
@@ -5,17 +5,20 @@
 .text-info{
     font-weight: 300;
     font-size: medium;
+    color: black;
 }
 
 .attr-user {
     font-weight: 400;
     font-size: medium;
+    color: black;
 }
 
 .text-company{
     font-weight: normal;
     font-size: small;
     padding-top: 0.8rem;
+    color: black;
 }
 
 .content-btn-edit {
