--- a/src/app/pages/my-travels/components/previous-trips-list/previous-trips-list.component.scss
+++ b/src/app/pages/my-travels/components/previous-trips-list/previous-trips-list.component.scss
@@ -44,10 +44,12 @@ span.style-name {
     font-size: 15px;
     text-transform: uppercase;
     font-size: x-small;
+    color: black;
 }
 
 .attr-detail {
     font-size: medium;
+    color: black;
 }
 
 hr.line {
