--- a/src/app/pages/my-travels/details-trip-scheduled/details-trip-scheduled.page.html
+++ b/src/app/pages/my-travels/details-trip-scheduled/details-trip-scheduled.page.html
@@ -10,7 +10,7 @@
     <div>
       <div class="header-card">
         <div class="avatar-info">
-          <div class="attr-user">CHOFER</div>
+          <div class="attr-user">CONDUCTOR</div>
           <cwc-icon name="phone" size="14px" color="true-black">
           </cwc-icon>
           <span class="number-phone" style="margin-left: 0.5rem;">{{travel.UserName + ' ' + travel.UserLastName}}</span>
