--- a/src/app/pages/vehicles/update-vehicle/update-vehicle.page.html
+++ b/src/app/pages/vehicles/update-vehicle/update-vehicle.page.html
@@ -12,7 +12,7 @@
     <cwc-grid class="demo-grid" design-version="v2" columns="12" mobile-columns="12">
       <cwc-cell colspan="12" mobile-colspan="12">
         <div class="section">
-          <cwc-input class="input" label='Medelo de vehículo' placeholder="Agrega el tipo de camión" design-version="v2"
+          <cwc-input class="input" label='Modelo de vehículo' placeholder="Agrega el tipo de camión" design-version="v2"
             formControlName="Model" maxlength="45" required></cwc-input>
         </div>
         <div class="section">
