--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app >
     <ion-router-outlet *ngIf="!isIframe"></ion-router-outlet>
     <div class="wrapper"  *ngIf="isIframe">
-        <cwc-logo class="logo" brand="readymix-go" style="height:160px"></cwc-logo>
+        <img class="logo" src="assets/icon/cemex_logo.png" style="height:70px">
     </div>
 </ion-app>
   
