Cambios botones y textos

--- a/src/app/auth/pages/change-password/change-password.page.html
+++ b/src/app/auth/pages/change-password/change-password.page.html
@@ -22,13 +22,13 @@
             <cwc-button class="btn-login" 
                   style="margin-bottom: 1rem;"
                   [disabled]="form.invalid"
-                  (click)="sendEmail()" 
+                  (cwcClick)="sendEmail()" 
                   design-version="v1" 
                   disabled="false" 
                   variant="primary-block">ACTUALIZAR CONTRASEÑA</cwc-button>
                   <app-error-messages [errors]="errors"></app-error-messages>
                   <div class="button">
-                    <cwc-button variant="link" (click)="onBack()" leading-icon="arrow-left-straight">Recuperar contraseña</cwc-button>
+                    <cwc-button variant="link" (cwcClick)="onBack()" leading-icon="arrow-left-straight">Recuperar contraseña</cwc-button>
                 </div>
         </div>
     </cwc-cell>
