--- a/src/app/pages/my-travels/maps/admin-track-trip-detail/new-drive-message/new-drive-message.page.html
+++ b/src/app/pages/my-travels/maps/admin-track-trip-detail/new-drive-message/new-drive-message.page.html
@@ -14,7 +14,7 @@
     </cwc-textarea>
 
     <div class="content-button">
-      <cwc-button design-version="v1" [disabled]="form.invalid" (click)="createMessage()" variant="regular-block">
+      <cwc-button design-version="v1" [disabled]="form.invalid" (cwcClick)="createMessage()" variant="regular-block">
         <div class="button-css">ENVIAR</div>
       </cwc-button>
     </div>
