--- a/src/app/pages/vehicles/update-archives-vehicle/update-archives-vehicle.page.html
+++ b/src/app/pages/vehicles/update-archives-vehicle/update-archives-vehicle.page.html
@@ -226,7 +226,7 @@
         <p *ngIf="!fileVehicle.photoFrontal">Abrir cámara del dispositivo</p>
 
       </div>
-      <cwc-button (click)="fileVehicle.removePhotoFrontal()" *ngIf="fileVehicle.photoFrontal" variant="link"
+      <cwc-button (cwcClick)="fileVehicle.removePhotoFrontal()" *ngIf="fileVehicle.photoFrontal" variant="link"
         class="m-h-reg remove-photo-archive">Quitar Foto</cwc-button>
     </cwc-cell>
     <cwc-cell colspan="6" mobile-colspan="12" style="cursor: pointer; margin-top: 1rem;">
@@ -241,7 +241,7 @@
         <p *ngIf="!fileVehicle.photoBack">Abrir cámara del dispositivo</p>
 
       </div>
-      <cwc-button (click)="fileVehicle.removePhotoBack()" *ngIf="fileVehicle.photoBack" variant="link"
+      <cwc-button (cwcClick)="fileVehicle.removePhotoBack()" *ngIf="fileVehicle.photoBack" variant="link"
         class="m-h-reg remove-photo-archive">Quitar Foto</cwc-button>
     </cwc-cell>
   </cwc-grid>
