--- a/src/app/pages/waiting-list/new-request/components/request-drive-new/request-drive-new.component.html
+++ b/src/app/pages/waiting-list/new-request/components/request-drive-new/request-drive-new.component.html
@@ -55,7 +55,7 @@
   </div>
   <footer slot='footer'>
     <div style='text-align: center'>
-      <cwc-button variant='link' (click)="goMyRequest()" routerLinkActive="router-link-active">
+      <cwc-button variant='link' (cwcClick)="goMyRequest()" routerLinkActive="router-link-active">
         <div style="color: #7AC943; font-size: large; padding-bottom: 1rem;">Regresar</div>
       </cwc-button>
     </div>
