--- a/src/app/pages/drivers/driver-details/driver-details.page.html
+++ b/src/app/pages/drivers/driver-details/driver-details.page.html
@@ -10,79 +10,85 @@
       <div class="content-avatar-menu" style="margin-right: 0.1rem; display: flex; justify-content: space-between;">
         <div style="display: flex;">
           <div>
-            <cwc-avatar size="small" variant="negative" name="{{driver.FirstName + ' ' + driver.LastName}}" class="m-h-xs" style="width: 6%; padding: 1.3rem"></cwc-avatar>
+            <cwc-avatar size="small" variant="negative" name="{{driver.FirstName + ' ' + driver.LastName}}"
+              class="m-h-xs" style="width: 6%; padding: 1.3rem"></cwc-avatar>
           </div>
           <div>
-              <span class="style-name">{{driver.FirstName + ' ' + driver.LastName}}</span>
-              <br>
-              <cwc-icon name="phone" size="14px" color="true-black">
-              </cwc-icon>
-              <span class="number-phone">{{driver.PhoneNumber}}</span>
+            <span class="style-name">{{driver.FirstName + ' ' + driver.LastName}}</span>
+            <br>
+            <cwc-icon name="phone" size="14px" color="true-black">
+            </cwc-icon>
+            <span class="number-phone">{{driver.PhoneNumber}}</span>
           </div>
         </div>
         <div>
-          <cwc-button (click)="updateVehicle()"  variant="link" class="m-h-reg link-cwc" routerLinkActive="router-link-active" >
+          <cwc-button (cwcClick)="updateVehicle()" variant="link" class="m-h-reg link-cwc"
+            routerLinkActive="router-link-active">
             <div style="font-size: small;">EDITAR</div>
           </cwc-button>
         </div>
       </div>
       <cwc-grid style="padding-top: 1rem; padding-bottom: 1rem;">
-        <cwc-cell mobile-colspan="12">   
-          <cwc-icon name='check-rounded-active-fill' size="12px" color='bright-green'></cwc-icon>
+        <cwc-cell mobile-colspan="12">
+          <cwc-icon name="radio-static" color="disabled-grey" *ngIf="driver.StatusTravel === 0" size="12px"></cwc-icon>
+          <cwc-icon name='error-rounded-fill' *ngIf="driver.StatusTravel === 1" size="12px" color='true-red'></cwc-icon>
           <span class="text-archive">{{textResp.getStatusTravelUser(driver.StatusTravel)}}</span>
         </cwc-cell>
       </cwc-grid>
       <div>
-        <cwc-grid class="demo-grid" >
-          <cwc-cell colspan="12" mobile-colspan="12">   
-              <div class="attr-user">Correo electrónico</div>
-              <span class="text-info">{{driver.Email}}</span>
+        <cwc-grid class="demo-grid">
+          <cwc-cell colspan="12" mobile-colspan="12">
+            <div class="attr-user">Correo electrónico</div>
+            <span class="text-info">{{driver.Email}}</span>
           </cwc-cell>
         </cwc-grid>
 
-        <cwc-grid class="demo-grid center-cell" >
+        <cwc-grid class="demo-grid center-cell">
           <cwc-cell mobile-colspan="6">
-              <div class="attr-user">Código Sap</div>
-              <span class="text-info">{{driver.CodeSap}}</span>
+            <div class="attr-user">Código Sap</div>
+            <span class="text-info">{{driver.CodeSap}}</span>
           </cwc-cell>
-          <cwc-cell mobile-colspan="6">   
-              <div class="attr-user">Cédula o NIT</div>
-              <span class="text-info">{{driver.IdDocument}}</span>
+          <cwc-cell mobile-colspan="6">
+            <div class="attr-user">Cédula o NIT</div>
+            <span class="text-info">{{driver.IdDocument}}</span>
           </cwc-cell>
         </cwc-grid>
 
-        <cwc-grid class="demo-grid center-cell" >
-          <cwc-cell mobile-colspan="12">   
-              <div class="attr-user">Empresa</div>
-              <span class="text-info">{{driver.CompanyName}}</span>
+        <cwc-grid class="demo-grid center-cell">
+          <cwc-cell mobile-colspan="12">
+            <div class="attr-user">Empresa</div>
+            <span class="text-info">{{driver.CompanyName}}</span>
           </cwc-cell>
         </cwc-grid>
       </div>
 
-      <div class="attr-document" >Papelería</div>
+      <div class="attr-document">Papelería</div>
       <div style=" border: 0.1px solid #d1d1d1; background: #d1d1d1; margin-bottom: 0.5rem;"></div>
 
       <cwc-grid column-gap="5px">
-        <cwc-cell mobile-colspan="6">   
-          <cwc-icon *ngIf="driver.LicenciaConduccion !== ''" name='check-rounded-active-fill' size="12px" color='bright-green'></cwc-icon>
+        <cwc-cell mobile-colspan="6">
+          <cwc-icon *ngIf="driver.LicenciaConduccion !== ''" name='check-rounded-active-fill' size="12px"
+            color='bright-green'></cwc-icon>
           <cwc-icon *ngIf="driver.LicenciaConduccion === ''" size="12px" color="true-red"></cwc-icon>
           <span class="text-archive">Licencia de conducción</span>
         </cwc-cell>
-        <cwc-cell mobile-colspan="6">   
-          <cwc-icon *ngIf="driver.CarnetSeguridadIndustrial !== ''" name='check-rounded-active-fill' size="12px" color='bright-green'></cwc-icon>
-          <cwc-icon *ngIf="driver.CarnetSeguridadIndustrial === ''" size="12px" color="true-red"></cwc-icon>
+        <cwc-cell mobile-colspan="6">
+          <cwc-icon *ngIf="driver.CedulaDocumento !== ''" name='check-rounded-active-fill' size="12px"
+            color='bright-green'></cwc-icon>
+          <cwc-icon *ngIf="driver.CedulaDocumento === ''" size="12px" color="true-red"></cwc-icon>
           <span class="text-archive">Cédula de ciudadanía</span>
         </cwc-cell>
       </cwc-grid>
       <cwc-grid column-gap="5px">
-        <cwc-cell mobile-colspan="6">   
-          <cwc-icon *ngIf="driver.CedulaDocumento !== ''" name='check-rounded-active-fill' size="12px" color='bright-green'></cwc-icon>
-          <cwc-icon *ngIf="driver.CedulaDocumento === ''" size="12px" color="true-red"></cwc-icon>
+        <cwc-cell mobile-colspan="6">
+          <cwc-icon *ngIf="driver.CarnetSeguridadIndustrial !== ''" name='check-rounded-active-fill' size="12px"
+            color='bright-green'></cwc-icon>
+          <cwc-icon *ngIf="driver.CarnetSeguridadIndustrial === ''" size="12px" color="true-red"></cwc-icon>
           <span class="text-archive">Carné de seguridad</span>
         </cwc-cell>
       </cwc-grid>
       <cwc-grid>
-        <cwc-cell mobile-colspan="12" class="cell-button">        
+        <cwc-cell mobile-colspan="12" class="cell-button">
           <cwc-button variant="link" (cwcClick)="updataDocuments()" class="m-h-reg link-cwc">
             <div style="font-size: small;">
               ACTUALIZAR DOCUMENTOS
