--- a/src/app/pages/home/components/home-admin/home-admin.component.html
+++ b/src/app/pages/home/components/home-admin/home-admin.component.html
@@ -74,7 +74,7 @@
         <span class="style-text">{{getTravelP()}}</span>
         <span>Viajes programados</span>
       </div>
-      <cwc-button (click)="onClickMyTravel()" variant="link">Ver más</cwc-button>
+      <cwc-button (cwcClick)="onClickMyTravel()" variant="link">Ver más</cwc-button>
     </div>
     <hr color="#D0D0D0" />
     <div class="content-request">
@@ -82,7 +82,7 @@
         <span class="style-text">{{getTravelF()}}</span>
         <span>Viajes terminados</span>
       </div>
-      <cwc-button (click)="onClickMyTravel()" variant="link">Ver más</cwc-button>
+      <cwc-button (cwcClick)="onClickMyTravel()" variant="link">Ver más</cwc-button>
     </div>
     <hr color="#D0D0D0" />
     <div class="content-request">
@@ -90,7 +90,7 @@
         <span class="style-text">{{data.travel.statusTwo}}</span>
         <span>Citas pendientes</span>
       </div>
-      <cwc-button (click)="onClickMyTravel()" variant="link">Ver más</cwc-button>
+      <cwc-button (cwcClick)="onClickMyTravel()" variant="link">Ver más</cwc-button>
     </div>
   </div>
 </cwc-card>
@@ -100,11 +100,11 @@
   <div class="card-content">
     <h4 style="text-align: center;">Buscar viaje</h4>
     <p style="text-align: center; font-size: 15px;">Revisa entre nuestros distintos departamentos disponibles un viaje
-      que se ajueste a tu ruta y horario.</p>
+      que se ajuste a tu ruta y horario.</p>
   </div>
 </cwc-card>
 
-<cwc-button style="margin-top: 1rem;" variant="regular-block" (click)="onClickTravel()">
+<cwc-button style="margin-top: 1rem;" variant="regular-block" (cwcClick)="onClickTravel()">
   <div class="button-css">BUSCAR VIAJE</div>
 </cwc-button>
 
@@ -114,7 +114,7 @@
     <p style="text-align: center; font-size: small;">Revisa tus datos y manten tu perfil actualizado para un mejor
       seguimiento</p>
     <div>
-      <cwc-button class="button-css" variant="regular-block" (click)="onUrl(linkClever)">
+      <cwc-button class="button-css" variant="regular-block" (cwcClick)="onUrl(linkClever)">
         <div class="button-css">CLEVER GLOBAL</div>
       </cwc-button>
     </div>
@@ -127,7 +127,7 @@
     <p style="text-align: center; font-size: small;">Verifica el estado de tus viajes y actualizaciones de los mismos
     </p>
     <div>
-      <cwc-button class="button-css" variant="regular-block" (click)="onUrl(linkTrip)">
+      <cwc-button class="button-css" variant="regular-block" (cwcClick)="onUrl(linkTrip)">
         <div class="button-css">Tu viaje CEMEX</div>
       </cwc-button>
     </div>
