--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,99 +1,113 @@
 <app-layout class="card-size">
   <cwc-card class="m-all-xs" *ngIf="profile">
-        <div class="card-content">
-          <div class="content-avatar-menu" style="margin-left: 0.2rem; margin-right: 0.1rem; display: flex; justify-content: space-between;">
-            <div style="display: flex;">
-              <div>
-                <cwc-avatar size="small" variant="negative" [name]=" profile.FirstName +' '+ profile.LastName " class="m-h-xs" style="width: 6%; padding: 1.3rem"></cwc-avatar>
-              </div>
-              <div>
-                  <span class="style-name">{{profile.FirstName +' '+ profile.LastName}}</span>
-                  <br>
-                  <cwc-icon name="phone" size="14px" color="true-black">
-                  </cwc-icon>
-                  <span class="number-phone">{{profile.PhoneNumber}}</span>
-              </div>
-            </div>
-            <div>
-              <cwc-button variant="link" class="m-h-reg link-cwc" [routerLink]="['/app/edit']" routerLinkActive="router-link-active">EDITAR</cwc-button>
-            </div>
-          </div>
-
+    <div class="card-content">
+      <div class="content-avatar-menu"
+        style="margin-left: 0.2rem; margin-right: 0.1rem; display: flex; justify-content: space-between;">
+        <div style="display: flex;">
           <div>
-
-            <cwc-grid style="padding-top: 1rem; padding-bottom: 1rem;">
-              <cwc-cell mobile-colspan="12">   
-                <cwc-icon name='check-rounded-active-fill' size="12px" color='bright-green'></cwc-icon>
-                <span class="text-archive">Disponible</span>
-              </cwc-cell>
-            </cwc-grid>
-
-            <cwc-grid class="demo-grid" >
-              <cwc-cell colspan="12" mobile-colspan="12">   
-                  <div class="attr-user">Correo electrónico</div>
-                  <span class="text-info">{{profile.Email}}</span>
-              </cwc-cell>
-            </cwc-grid>
-
-            <div *ngIf="profile.RolesId === 1">
-              <cwc-grid class="demo-grid center-cell" >
-                <cwc-cell mobile-colspan="4">
-                    <div class="attr-user">Código Sap</div>
-                    <span class="text-info">{{profile.CodeSap}}</span>
-                </cwc-cell>
-                <cwc-cell mobile-colspan="5">   
-                    <div class="attr-user">Cédula o NIT</div>
-                    <span class="text-info">{{profile.IdDocument}}</span>
-                </cwc-cell>
-              </cwc-grid>
-            </div>
-            
-
-            <cwc-grid class="demo-grid center-cell" >
-              <cwc-cell colspan="12" mobile-colspan="12">
-                  <div class="attr-user">Empresa</div>
-                  <span class="text-info">{{profile.CompanyName}}</span>
-              </cwc-cell>
-            </cwc-grid>
+            <cwc-avatar size="small" variant="negative" [name]=" profile.FirstName +' '+ profile.LastName "
+              class="m-h-xs" style="width: 6%; padding: 1.3rem"></cwc-avatar>
           </div>
-          
-          <div class="attr-document" >Documentación</div>
-          <div style=" border: 0.1px solid #d1d1d1; background: #d1d1d1; margin-bottom: 0.5rem;"></div>
+          <div>
+            <span class="style-name">{{profile.FirstName +' '+ profile.LastName}}</span>
+            <br>
+            <cwc-icon name="phone" size="14px" color="true-black">
+            </cwc-icon>
+            <span class="number-phone">{{profile.PhoneNumber}}</span>
+          </div>
+        </div>
+        <div>
+          <cwc-button variant="link" class="m-h-reg link-cwc" [routerLink]="['/app/edit']"
+            routerLinkActive="router-link-active">EDITAR</cwc-button>
+        </div>
+      </div>
 
-          <cwc-grid column-gap="5px">
-            <cwc-cell mobile-colspan="6">   
-              <cwc-icon name='check-rounded-active-fill' size="12px" color='bright-green'></cwc-icon>
-              <span class="text-archive">Licencia de conducción</span>
+      <div>
+
+        <cwc-grid style="padding-top: 1rem; padding-bottom: 1rem;">
+          <cwc-cell mobile-colspan="12">
+            <cwc-icon name="circle-filled" color="disabled-grey" *ngIf="profile.StatusTravel === 0"
+              size="12px"></cwc-icon>
+            <cwc-icon name='check-rounded-active-fill' *ngIf="profile.StatusTravel === 1" size="12px"
+              color='bright-green'></cwc-icon>
+            <span class="text-archive">{{textResp.getStatusTravelUser(profile.StatusTravel)}}</span>
+          </cwc-cell>
+        </cwc-grid>
+
+        <cwc-grid class="demo-grid">
+          <cwc-cell colspan="12" mobile-colspan="12">
+            <div class="attr-user">Correo electrónico</div>
+            <span class="text-info">{{profile.Email}}</span>
+          </cwc-cell>
+        </cwc-grid>
+
+        <div *ngIf="profile.RolesId === 1">
+          <cwc-grid class="demo-grid center-cell">
+            <cwc-cell mobile-colspan="4">
+              <div class="attr-user">Código Sap</div>
+              <span class="text-info">{{profile.CodeSap}}</span>
             </cwc-cell>
-            <cwc-cell mobile-colspan="6">   
-              <cwc-icon name='check-rounded-active-fill' size="12px" color='bright-green'></cwc-icon>
-              <span class="text-archive">Cédula de ciudadanía</span>
+            <cwc-cell mobile-colspan="5">
+              <div class="attr-user">Cédula o NIT</div>
+              <span class="text-info">{{profile.IdDocument}}</span>
             </cwc-cell>
-          </cwc-grid>
-          <cwc-grid>
-            <cwc-cell mobile-colspan="12">   
-              <cwc-icon name='check-rounded-active-fill' size="12px" color='bright-green'></cwc-icon>
-              <span class="text-archive">Carné de seguridad</span>
-            </cwc-cell>
-          </cwc-grid>
-          <cwc-grid>
-            <cwc-cell mobile-colspan="12" class="cell-button">        
-              <cwc-button variant="link" class="m-h-reg link-cwc" [routerLink]="['/app/update-archives']" routerLinkActive="router-link-active">ACTUALIZAR DOCUMENTOS</cwc-button>
-              </cwc-cell>
           </cwc-grid>
         </div>
-    </cwc-card>
-    <cwc-card style="margin : .5rem" design-version="v1" *ngIf="profile">
-      <div class="card-content">
-       <h4 style="text-align: center;">Accede a tu cuenta Clever</h4>
-       <p style="text-align: center; font-size: small;">Revisa tus datos y manten tu perfil actualizado para un mejor seguimiento</p>
-       <div>
-        <cwc-button class="button-css" variant="regular-block" (click)="onUrl(linkClever)">
+
+
+        <cwc-grid class="demo-grid center-cell">
+          <cwc-cell colspan="12" mobile-colspan="12">
+            <div class="attr-user">Empresa</div>
+            <span class="text-info">{{profile.CompanyName}}</span>
+          </cwc-cell>
+        </cwc-grid>
+      </div>
+
+      <div class="attr-document">Documentación</div>
+      <div style=" border: 0.1px solid #d1d1d1; background: #d1d1d1; margin-bottom: 0.5rem;"></div>
+
+      <cwc-grid column-gap="5px">
+        <cwc-cell mobile-colspan="6">
+          <cwc-icon *ngIf="profile.LicenciaConduccion !== ''" name='check-rounded-active-fill' size="12px"
+            color='bright-green'></cwc-icon>
+          <cwc-icon *ngIf="profile.LicenciaConduccion === ''" size="12px" color="true-red"></cwc-icon>
+          <span class="text-archive">Licencia de conducción</span>
+        </cwc-cell>
+        <cwc-cell mobile-colspan="6">
+          <cwc-icon *ngIf="profile.CedulaDocumento !== ''" name='check-rounded-active-fill' size="12px"
+            color='bright-green'></cwc-icon>
+          <cwc-icon *ngIf="profile.CedulaDocumento === ''" size="12px" color="true-red"></cwc-icon>
+          <span class="text-archive">Cédula de ciudadanía</span>
+        </cwc-cell>
+      </cwc-grid>
+      <cwc-grid>
+        <cwc-cell mobile-colspan="12">
+          <cwc-icon *ngIf="profile.CarnetSeguridadIndustrial !== ''" name='check-rounded-active-fill' size="12px"
+            color='bright-green'></cwc-icon>
+          <cwc-icon *ngIf="profile.CarnetSeguridadIndustrial === ''" size="12px" color="true-red"></cwc-icon>
+          <span class="text-archive">Carné de seguridad</span>
+        </cwc-cell>
+      </cwc-grid>
+      <cwc-grid>
+        <cwc-cell mobile-colspan="12" class="cell-button">
+          <cwc-button variant="link" class="m-h-reg link-cwc" [routerLink]="['/app/update-archives']"
+            routerLinkActive="router-link-active">ACTUALIZAR DOCUMENTOS</cwc-button>
+        </cwc-cell>
+      </cwc-grid>
+    </div>
+  </cwc-card>
+  <cwc-card style="margin : .5rem" design-version="v1" *ngIf="profile">
+    <div class="card-content">
+      <h4 style="text-align: center;">Accede a tu cuenta Clever</h4>
+      <p style="text-align: center; font-size: small;">Revisa tus datos y manten tu perfil actualizado para un mejor
+        seguimiento</p>
+      <div>
+        <cwc-button class="button-css" variant="regular-block" (cwcClick)="onUrl(linkClever)">
           <div class="button-css">CLEVER GLOBAL</div>
         </cwc-button>
-       </div>
       </div>
-    </cwc-card>
+    </div>
+  </cwc-card>
 </app-layout>
 <!--=====================================
 		LOADING
