--- a/src/app/pages/vehicles/update-vehicle/update-vehicle.page.html
+++ b/src/app/pages/vehicles/update-vehicle/update-vehicle.page.html
@@ -43,7 +43,7 @@
       BOTON PARA GUARDAR EL REGISTRO
     ======================================-->
     <div class="content-button">
-      <cwc-button design-version="v1" [disabled]="form.invalid" (click)="openAlertConfirm()" variant="regular-block">
+      <cwc-button design-version="v1" [disabled]="form.invalid" (cwcClick)="openAlertConfirm()" variant="regular-block">
         <div class="button-css">GUARDAR CAMBIOS</div>
       </cwc-button>
     </div>
@@ -59,8 +59,8 @@
   <p>¿Esta seguro que los datos registrados estan correctos?</p>
   <footer slot='footer'>
     <div style='text-align: end'>
-      <cwc-button variant='support' (click)="closeAlertConfirm()" style="margin-right: 1rem;">Cancelar</cwc-button>
-      <cwc-button variant='primary' (click)="updateVehicle()">Aceptar</cwc-button>
+      <cwc-button variant='support' (cwcClick)="closeAlertConfirm()" style="margin-right: 1rem;">Cancelar</cwc-button>
+      <cwc-button variant='primary' (cwcClick)="updateVehicle()">Aceptar</cwc-button>
     </div>
   </footer>
 </cwc-modal>
