--- a/src/app/components/alert-success/alert-success.component.html
+++ b/src/app/components/alert-success/alert-success.component.html
@@ -1,4 +1,4 @@
-<cwc-modal id='alert-modal-succes' [open]="alertShow" close-on-bd-click="false" show-close-btn="true" (cwcClose)="go()">
+<cwc-modal id='alert-modal-succes' [open]="alertShow" close-on-bd-click="false" show-close-btn="false" (cwcClose)="go()">
     <div style='text-align: center'>
         <cwc-icon name='accepted-ok' size='120px' color='bright-green'></cwc-icon>
         <h4 class='modal--confirmation__message'>{{ title }}</h4>
