--- a/src/app/pages/my-travels/components/my-travels-admin/my-travels-admin.component.html
+++ b/src/app/pages/my-travels/components/my-travels-admin/my-travels-admin.component.html
@@ -1,4 +1,4 @@
-<app-layout class="card-size">
+<app-layout>
   <div style="width: 100%;">
     <cwc-tabs variant="heading" >
       <cwc-tab [active]="selectedTab == 'anteriores'" name='anteriores' (click)="changeTab('anteriores')">ANTERIORES</cwc-tab>
