--- a/src/app/pages/my-travels/components/my-travels-drive/my-travels-drive.component.html
+++ b/src/app/pages/my-travels/components/my-travels-drive/my-travels-drive.component.html
@@ -1,5 +1,5 @@
 <app-layout class="card-size">
-  <cwc-tabs variant="heading">
+  <cwc-tabs variant="heading" style="width: 100%;">
     <cwc-tab [active]="selectedTab == 'anteriores'" name='anteriores' (click)="changeTab('anteriores')">ANTERIORES</cwc-tab>
     <cwc-tab [active]="selectedTab == 'programados'" name='programados' (click)="changeTab('programados')">PROGRAMADOS</cwc-tab>
   </cwc-tabs>
